# xmlstruct

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: parse_bob.py  parse_bob_xmlstruct.py  parse_bob_xsdata.py
tests/: test_example.py  test_tokenizer.py  test_xdf3.py  test_xmlstruct.py  xdf3.xml
xmlstruct/: __init__.py  tokenizer.py  xml.py
