[tool.poetry]
name = "xmlstruct"
version = "0.1.0"
description = ""
authors = ["Felix Bernhardt <felix.bernhardt@mailbox.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.2.2"

[tool.poetry.group.test.dependencies]
ruff = "^0.5.7"
pyright = "^1.1.338"
pytest = "^8.3.2"
lxml-stubs = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
